# signalix-backend

./: .env.example  .env.production.template  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  alter_db.py  celery_config.py  check_db.py  docker-compose.yml  gateway.py  init_db.py  main_app.py  pyproject.toml  railway.toml  requirements-test.txt  requirements.txt  run_nifty_analysis.py  signalixai.db
agents/: bull_bear_researchers.py  correlation_analyst.py  deep_fundamentals_analyst.py  earnings_analyst.py  final_trader.py  forex_macro_analyst.py  fundamentals_analyst.py  historical_validation.py  liquidity_analyst.py  macro_analyst.py  market_regime_detector.py  news_scanner.py  options_analyst.py  portfolio_optimizer.py  pre_screener.py  quant_cross_check.py  risk_manager.py  sector_rotation_analyst.py  sentiment_analyst.py  technical_analyst.py  volatility_analyst.py
alembic/: env.py
alembic/versions/: 004_algo_builder_schema.py  005_screening_snapshot_view.py  006_strategy_templates.py  007_screening_templates.py  README_004.md  README_005.md  README_006.md
deployment/: .env.production.template  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile.alerts  Dockerfile.algo-builder  Dockerfile.backtesting  Dockerfile.screening  aws-cdk-stack.ts  docker-compose.production.yml  nginx.conf
docs/guides/: API_DOCUMENTATION_README.md  CELERY_BEAT_README.md  DEPLOYMENT_GUIDE.md  ML_TRAINING_SPECIFICATIONS.md  README.md  REDIS_SETUP_GUIDE.md
docs/reports/: AUTH_SERVICE_ERROR_REPORT.md  BACKEND_ARCHITECTURE.md  COMPLETE_IMPLEMENTATION_VERIFICATION_REPORT.md  DATABASE_CONNECTION_TROUBLESHOOTING.md  INDEX.md  PERFORMANCE_REPORT.md  PHASE_10_COMPLETION_REPORT.md  PHASE_10_TASKS_COMPLETE.md  PHASE_1_COMPLETE.md  QUICK_START_TASK_2.md  README_COMPLETE.md  README_DEPLOYMENT.md  REDIS_SETUP_STEPS.md  SECURITY_AUDIT_REPORT.md  SECURITY_REMEDIATION_PLAN.md  SERVICE_STATUS_REPORT.md  TASK_11_COMPLETION_SUMMARY.md  TASK_1_COMPLETION_SUMMARY.md  TASK_21_COMPLETION_SUMMARY.md  TASK_29_COMPLETION_SUMMARY.md  TASK_2_IMPLEMENTATION_SUMMARY.md  TASK_31_DEDUPLICATION_SUMMARY.md  TASK_33_COMPLETION_SUMMARY.md  TASK_34_FO_WHALE_TRACKER_SUMMARY.md  TASK_35_CRYPTO_WHALE_TRACKER_SUMMARY.md  TASK_36_US_EQUITY_WHALE_TRACKER_SUMMARY.md  TASK_3_COMPLETION_SUMMARY.md  TASK_44_BROKER_ADAPTERS_SUMMARY.md  TASK_46_COMPLETION_SUMMARY.md  TASK_47_PERFORMANCE_BENCHMARKING_SUMMARY.md  TASK_48_API_DOCUMENTATION_SUMMARY.md  TASK_48_COMPLETION_SUMMARY.md  TASK_48_FINAL_REPORT.md  TASK_50_CHECKPOINT_SUMMARY.md  TASK_51_CELERY_BEAT_COMPLETION_SUMMARY.md  TASK_5_COMPLETION_SUMMARY.md  TASK_6_COMPLETION_SUMMARY.md  UPSTASH_REDIS_SUCCESS.md  api_spec.json  checkpoint_task11_results.json  (+3 more)
infrastructure/cdk/: app.py
orchestration/: langgraph_pipeline.py
performance_tests/: README.md  locustfile_backtest.py  locustfile_screening.py  quick_start.bat  quick_start.sh  run_all_benchmarks.py  test_alert_delivery.py  test_anomaly_pipeline.py  verify_setup.py
scripts/: create_test_user.py  deploy_railway.sh  init_database.py  load_market_data.py  seed_analysis_types.py  seed_options_data.py  setup_production.py  temp_gateway.py  test_auth_flow.py  train_all_models.py  verify_database.py
scripts/database/: check_users.py  create_fresh_test_user.py  run_migration_005.py  setup_production_database.py
scripts/deployment/: deploy_celery_beat_ecs.sh  generate_openapi_simple.py  generate_openapi_spec.py
scripts/tests/: run_model_tests.py  test_migration_004.py  test_redis.py  test_registration.py  test_registration_detailed.py  test_services.py  test_simple_registration.py  test_strategy_templates_validation.py  test_upstash_redis.py
scripts/verification/: checkpoint_phase1_verification.py  checkpoint_task11_compiler_verification.py  checkpoint_task37_simple.py  checkpoint_task37_verification.py  checkpoint_task50_integration.py  validate_compiler.py  verify_promotion_endpoint.py  verify_task48.py
services/: mock_router.py
services/alerts/: Dockerfile  README_DELIVERY_ENGINE.md  TASK_32_ORCHESTRATOR_SUMMARY.md  TASK_39_MATCHER_SUMMARY.md  TASK_41_COMPLETION_SUMMARY.md  TASK_42_WS_ROUTER_SUMMARY.md  TASK_43_HISTORY_API_SUMMARY.md  __init__.py  anomaly_orchestrator.py  deduplication.py  delivery_engine.py  example_history_api_usage.py  example_matcher_usage.py  example_usage.py  history_router.py  matcher.py  tasks.py  test_anomaly_orchestrator.py  test_deduplication.py  test_delivery_engine.py  test_history_router.py  test_history_router_simple.py  test_matcher.py  test_orchestrator_simple.py  test_ws_integration.py  test_ws_router.py  ws_router.py
services/algo_builder/: COMPILATION_ENDPOINT_README.md  COMPILER_README.md  Dockerfile  README.md  SANDBOX_README.md  TASK_10_IMPLEMENTATION_SUMMARY.md  TASK_7_COMPLETION_SUMMARY.md  TASK_8_COMPLETION_SUMMARY.md  TASK_9_COMPLETION_SUMMARY.md  __init__.py  base_strategy.py  compiler.py  demo_sandbox.py  flow_router.py  models.py  python_host_router.py  redis_client.py  router.py  run_base_strategy_tests.py  run_compiler_tests.py  run_sandbox_tests.py  run_tests.py  sandbox.py  test_router.py  (+6 more)
shared/: __init__.py
tests/: conftest.py  test_algo_builder_models.py  test_celery_beat_smoke.py  test_health.py  test_paper_to_live_promotion_simple.py  test_screening_snapshot.py  test_secrets_manager.py  test_strategy_templates.py
(+311 files in other folders)
